[gd_scene load_steps=10 format=3 uid="uid://rlkm6jmfrdow"]

[ext_resource type="Script" path="res://Misc/Testing/Player.gd" id="1_cp0x0"]
[ext_resource type="Script" path="res://Scripts/PlayerCamera.gd" id="2_himsr"]
[ext_resource type="PackedScene" uid="uid://boew2tgfdmhyr" path="res://Scenes/Blaster_PeaShooter.tscn" id="3_jl72a"]
[ext_resource type="PackedScene" uid="uid://d4e0tm77juivn" path="res://Scenes/Blaster_SprayBlaster.tscn" id="4_re4bi"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_x82gv"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_pmgmi"]
dof_blur_near_enabled = true

[sub_resource type="BoxOccluder3D" id="BoxOccluder3D_a2s00"]
size = Vector3(100, 5, 100)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ryf6d"]

[sub_resource type="ViewportTexture" id="ViewportTexture_iid3e"]
viewport_path = NodePath("SubViewport")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_cp0x0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30352, 0)
shape = SubResource("ConvexPolygonShape3D_x82gv")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.84787, 0)

[node name="Camera3D" type="Camera3D" parent="Neck"]
cull_mask = 1048573
attributes = SubResource("CameraAttributesPractical_pmgmi")
current = true
far = 500.0
script = ExtResource("2_himsr")

[node name="ray1" type="RayCast3D" parent="Neck/Camera3D"]
transform = Transform3D(4.37114e-08, 0, 1, 0, -1, 0, -1, 0, 4.37114e-08, 0, -0.18424, 0)
enabled = false
target_position = Vector3(5, 0, 0)

[node name="ray2" type="RayCast3D" parent="Neck/Camera3D"]
transform = Transform3D(4.37114e-08, 0, 1, 0, -1, 0, -1, 0, 4.37114e-08, 0, -0.18424, 0)
enabled = false
target_position = Vector3(5, 0, 0)

[node name="ray3" type="RayCast3D" parent="Neck/Camera3D"]
transform = Transform3D(4.37114e-08, 0, 1, 0, -1, 0, -1, 0, 4.37114e-08, 0, -0.18424, 0)
enabled = false
target_position = Vector3(5, 0, 0)

[node name="ray4" type="RayCast3D" parent="Neck/Camera3D"]
transform = Transform3D(4.37114e-08, 0, 1, 0, -1, 0, -1, 0, 4.37114e-08, 0, -0.18424, 0)
enabled = false
target_position = Vector3(5, 0, 0)

[node name="ray5" type="RayCast3D" parent="Neck/Camera3D"]
transform = Transform3D(4.37114e-08, 0, 1, 0, -1, 0, -1, 0, 4.37114e-08, 0, -0.18424, 0)
enabled = false
target_position = Vector3(5, 0, 0)

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, -1.5, -20)
occluder = SubResource("BoxOccluder3D_a2s00")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30352, 0)
layers = 5
mesh = SubResource("CapsuleMesh_ryf6d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RenderGun" type="Sprite2D" parent="CanvasLayer"]
texture = SubResource("ViewportTexture_iid3e")
offset = Vector2(640, 360)

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1280, 720)

[node name="WeaponCamera" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
cull_mask = 2

[node name="Blaster_PeaShooter" parent="SubViewport/WeaponCamera" instance=ExtResource("3_jl72a")]
transform = Transform3D(-1.18177, 0.0361845, -0.205212, 0, 1.18177, 0.208378, 0.208378, 0.205212, -1.16382, 0.549, -0.557078, -0.776)
visible = false

[node name="Blaster_SprayBlaster" parent="SubViewport/WeaponCamera" instance=ExtResource("4_re4bi")]
transform = Transform3D(-0.984808, 0.0301537, -0.17101, 0, 0.984808, 0.173648, 0.173648, 0.17101, -0.969846, 0.549, -0.420538, -0.773929)
visible = false

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewport/WeaponCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.551751, 0, 1.13116)
layers = 2
